--- a/ferragens-joao/style.css
+++ b/ferragens-joao/style.css
@@ -1,54 +1,72 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #dbdada;
-    margin: 8;
-    padding: 7;
-    color-interpolation-filters: auto;
-
-    display: flex;
-    justify-content: center; 
-    align-items: center;     
-    height: 100vh;          
+    background-color: #f0f0f0;
+    margin: 0;
+    padding: 20px;         
 }
 /* Cabeçalho */
-.cabecalho h1{
+header{
+    background-color: #0077cc;
+    color: white;
+    padding: 20px;
     text-align: center;
-    color: #11100e;
-    margin-bottom: 30px;
+
 }
 .cabecalho{
     justify-content: center;
     width: 200px;
 }
-
-/* Lista de produtos */
-.lista-produtos {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin-bottom: 40px;
-    border: #1d1515;
+/* formulário principal */
+main{
+    background-color: white;
+    padding: 30px;
+    max-width: 400px;
+    margin: 30px auto;
+    box-shadow: 0 0 10px rgba(0,0,0);
+    border-radius: 10px;
     
 }
 
-.produto {
-    background-color: #f0f0eb;
-    padding: 15px;
-    border-radius: 8px;
+form p {
+    margin-bottom: 10px;
+    font-weight: bold;
 }
 
-.produto h3 {
-    margin: 0 0 10px;
-    color: #0e0f11;
+select, input[type="number"]{
+    width: 100;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 
-/* Formulário */
-.formulario {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
+button {
+    width: 100px;
+    padding: 10px;
+    background-color: #0077cc;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
 }
-h2{
-    background-color: #eee7e7;
-    width: 200px;
+input[type="number"]{
+    width: 95px;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+button:hover {
+    background-color: #005fa3;
+}
+
+#resultado{
+    margin-top: 20px;
+    text-align: center;
+    font-size: 18px;
+    color: green;
 }
