--- a/ferragens-joao/style.css
+++ b/ferragens-joao/style.css
@@ -1,54 +1,71 @@
+
+
 body {
     font-family: Arial, sans-serif;
-    background-color: #dbdada;
-    margin: 8;
-    padding: 7;
-    color-interpolation-filters: auto;
-
+    background-color: #afacac;
+    height: 100vh;
     display: flex;
-    justify-content: center; 
-    align-items: center;     
-    height: 100vh;          
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+
+main{
+    background-color: #a09c9c;
+    border-radius: 5px;
 }
 /* Cabeçalho */
-.cabecalho h1{
-    text-align: center;
-    color: #11100e;
-    margin-bottom: 30px;
-}
-.cabecalho{
-    justify-content: center;
-    width: 200px;
-}
 
-/* Lista de produtos */
-.lista-produtos {
+
+.cabecalho h1 {
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    margin-bottom: 40px;
-    border: #1d1515;
-    
+    align-items: center;
+    font-size: 24px;
+    color: #fdf90a;
+}
+
+/* Título da seção */
+h2 {
+    background-color: #a7a1a1;
+    text-align: center;
+    padding: 10px;
+    font-size: 18px;
+    border-radius: px;
+    margin-bottom: 10px;
+    color: #e6f703;
 }
 
 .produto {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    flex-direction: column;
     background-color: #f0f0eb;
-    padding: 15px;
+    padding: 12px;
     border-radius: 8px;
+    
+    margin-bottom: 10px;
 }
 
 .produto h3 {
-    margin: 0 0 10px;
-    color: #0e0f11;
+    margin-bottom: 8px;
+    color: #2054bd;
+    width: 100%;
+    
 }
 
 /* Formulário */
 .formulario {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 12px;
 }
-h2{
-    background-color: #eee7e7;
-    width: 200px;
+label{
+    color: #f4f806;
+}
+button{
+    color: #f70303;
 }
